--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
 
 <div class="container image-container">
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpt.m.wikipedia.org%2Fwiki%2FFicheiro%3APalmeiras_logo.svg&psig=AOvVaw0IKpAjVhS0HCXVGRcq_ogl&ust=1729285213558000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJjq3cinlokDFQAAAAAdAAAAABAE" alt="imagem superior esquerda" class="img-top-left" />
+    <img src="img/palmeirameiras.webp" alt="imagem superior esquerda" class="img-top-left" />
     <img src="img" alt="imagem central" class="img-center">
     <img src="img" alt="imagem inferior direita" class="img-bottom-right">
 </div>
