--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
 <div class="container image-container">
     <img src="img/palmeirameiras.webp" alt="imagem superior esquerda" class="img-top-left" />
-    <img src="img" alt="imagem central" class="img-center">
-    <img src="img" alt="imagem inferior direita" class="img-bottom-right">
+    <img src="img/palmeirameiras.webp" alt="imagem central" class="img-center">
+    <img src="img/palmeirameiras.webp" alt="imagem inferior direita" class="img-bottom-right">
 </div>
 
 </body>
